Closed Bug 1878257 Opened 4 months ago Closed 4 months ago

MsgIncomingServer and SmtpServer have observers that are not cleaned up if the server is removed

Categories

(MailNews Core :: Networking, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 fixed)

RESOLVED FIXED
124 Branch
Tracking Status
thunderbird_esr115 --- fixed

People

(Reporter: darktrojan, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The constructor of MsgIncomingServer adds an observer for passwordmgr-storage-changed, but if the server is removed this observer isn't cleaned up.

It turns out SmtpServer has the same problem.

Summary: MsgIncomingServer observer not cleaned up if the server is removed → MsgIncomingServer and SmtpServer have observers that are not cleaned up if the server is removed
Attachment #9377888 - Attachment description: Bug 1878257 - Clean up observer in MsgIncomingServer when it gets shut down. r=#thunderbird-reviewers → Bug 1878257 - Use weak references when using MsgIncomingServer/SmtpServer as observers. r=#thunderbird-reviewers
Attachment #9377888 - Attachment description: Bug 1878257 - Use weak references when using MsgIncomingServer/SmtpServer as observers. r=#thunderbird-reviewers → Bug 1878257 - Clean up observers of `passwordmgr-storage-changed` in server objects. r=#thunderbird-reviewers
Target Milestone: --- → 124 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/64f27806a0dc
Clean up observers of passwordmgr-storage-changed in server objects. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED

Comment on attachment 9377888 [details]
Bug 1878257 - Clean up observers of passwordmgr-storage-changed in server objects. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #):
User impact if declined: Memory leak
Testing completed (on c-c, etc.): In beta since 124
Risk to taking this patch (and alternatives if risky): Low

Attachment #9377888 - Flags: approval-comm-esr115?
Version: unspecified → Thunderbird 115

Comment on attachment 9377888 [details]
Bug 1878257 - Clean up observers of passwordmgr-storage-changed in server objects. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9377888 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: