Bug 1878257 - Clean up observers of `passwordmgr-storage-changed` in server objects. r=mkmelin And fix an error when `passwordmgr-storage-changed` is fired with an empty array.

Differential Revision: https://phabricator.services.mozilla.com/D200429

--HG--
extra : rebase_source : 61fcbf76c6f54ae9c13dc4a0c85af6ffdfc41903
extra : amend_source : 9ab81ab5d1dcd08675302d92031ecd725d2faecb
extra : absorb_source : a895b499bcb9311551b2383d8d95a3417cf7dfb9